Archive2/17/4d3ef72bf06994/output
main.cpp:8:21: error: expected body of lambda expression
    void bar1() { []foo(); } // Prints "global"?
                    ^
main.cpp:9:25: error: expected body of lambda expression
    void bar2() { [this]foo(); } // Prints "member"?
                        ^
2 errors generated.
